attempt to deploy with github pages

--- a/data_cu.html
+++ b/data_cu.html
@@ -47,9 +47,9 @@
     </tr>
   </table>
 <div> 
-<a href="index.html">Arun's profile</a>
+  <!-- <a href=.html">Arun's profile</a> -->
 <br>
-<a href="Instructor.html">Link to Data Scientist Profile</a>
+<a href="data_cu.html">Link to Data Scientist Profile</a>
 
 </div>
 </body>
